--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,260 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
-    <link rel="manifest" href="./favicon_io/site.webmanifest" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <title>Real Talk</title>
-    <link rel="stylesheet" href="./styles/index.css" />
-  </head>
-  <body>
-    <!-- navbar-start -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
+  <link rel="manifest" href="./favicon_io/site.webmanifest" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <div id="navbar">
-      <div class="image">
-        <a href="./index.html"
-          ><img
-            src="./images/real_talk_blue.png.crdownload"
-            style="width: 130px"
-            alt="error"
-        /></a>
-      </div>
-      <div class="nav-menu">
-        <ul>
-          <li>
-            <a href="#"><b>Real Talk</b></a>
-          </li>
-          <li><a id="dash" href="#">Dashboard</a></li>
-          <li><a id="video" href="#">Real Talk Video Call</a></li>
-          <li><a  id="chat" href="#">Real Talk Chat</a></li>
-          <li><a href="#">Features</a></li>
-          <li>
-            <a href="#">Products</a>
-            <ul>
-              <li><a href="#">Meet Now</a></li>
-              <li><a href="#">Real Talk Manager</a></li>
-              <li><a href="#">Real Talk With Alexa</a></li>
-              <li><a href="#">Real Talk for content creators</a></li>
-              <li><a href="#">Real Talk for business</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">Get Help</a>
-            <ul>
-              <li><a href="#">Real Talk Support</a></li>
-              <li><a href="#">Blogs</a></li>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">About Real Talk</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="sign-in" id="sign-in-2">
-        <ul>
-          <li id="logout"><a href="#">Host a meeting</a></li>
-          <li class="dom-manipulation">
-            <a href="#">Sign In</a>
-            <ul>
-              <li><a href="#">My account</a></li>
-              <li><a href="#">Use Real Talk Online</a></li>
-              <li>
-                <a href="./signup.html"
-                  >New to Real Talk? <span>Sign Up</span></a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <title>Real Talk</title>
+  <link rel="stylesheet" href="./styles/index.css" />
+</head>
+
+<body>
+  <!-- navbar-start -->
+
+  <div id="navbar">
+    <div class="image">
+      <a href="./index.html"><img src="./images/real_talk_blue.png.crdownload" style="width: 130px" alt="error" /></a>
     </div>
-
-    <!-- navbar-end -->
-
-    <!-- mid-section-start -->
-
-    <div id="mid">
-      <div class="mid-1">
-        <h1>Introducing the new Bing <span>in Real Talk</span></h1>
-        <h2>
-          Ready to supercharge your chats? Bing in Real Talk can help you get
-          answers, creative ideas or summaries in chat, anytime, anywhere.
-          <a href="#">Learn More</a>
-        </h2>
-        <a href="#"><button>Download Real Talk</button></a>
-        <div class="last">
-          <a href="#">Open Real Talk in your browser</a>
-        </div>
-      </div>
-      <div class="mid-2">
-        <img
-          src="https://secure.skypeassets.com/content/dam/scom/blogs/skype-bot-collab/image-desktop-bing.png"
-          alt="error"
-        />
-      </div>
-    </div>
-
-    <div id="mid-second">
-      <h1>Discover more from Real Talk</h1>
-    </div>
-
-    <div id="mid-third">
-      <div>
-        <img
-          src="https://secure.skypeassets.com/content/dam/scom/blogs/skype-bot-collab/share-thumbnail-3.png"
-          alt="error"
-        />
-        <h3><b>Get social with the new Bing in Real Talk</b></h3>
-        <p>
-          The new Bing in Real Talk is your AI-powered copilot, and can provide
-          helpful answers to your questions. Whether you need a quick answer or
-          something more in-depth, Bing uses the latest advancements in AI
-          technology to provide you with the most real-time answers and
-          insights.
-        </p>
-        <a href="#">Learn more ></a>
-      </div>
-      <div>
-        <img
-          src="https://secure.skypeassets.com/content/dam/scom/blogs/bing/skype-bing-thumbnail.jpg"
-          alt="error"
-        />
-        <h3><b>​Want to be the hero on your next call? 🦸</b></h3>
-        <p>
-          Did you know Real Talk Bing mashup happened? Here are the results - a
-          unique high-quality background images in your Real Talk calls! And that's
-          not all, you can now kill time by searching up the image and exploring
-          more about the beautiful scenery and places you see on your
-          background!
-        </p>
-        <a href="#">Learn more ></a>
-      </div>
-      <div>
-        <img
-          src="https://secure.skypeassets.com/content/dam/scom/blogs/messaging/home-page-modern-tab.jpg"
-          alt="error"
-        />
-        <h3>
-          <b
-            >Your chats are about to get much better, Real Talk's new and improved
-            messaging is here!</b
-          >
-        </h3>
-        <p>
-          Last month we revealed our big plans for an improved, faster,
-          reliable, and super modern-looking Real Talk. Now we're making good on our
-          promise by rolling out the first of the new upgrades.
-        </p>
-        <a href="#">Learn more ></a>
-      </div>
-      <div>
-        <img
-          src="https://secure.skypeassets.com/content/dam/scom/blogs/evergreen/home-page-tab-template.jpg"
-          alt="error"
-        />
-        <h3><b>Preserving the connections that matter most with Real Talk</b></h3>
-        <p>
-          And thanks to Real Talk, it’s also never been easier. Here’s how people
-          across the globe used technology to stay connected through it all.
-        </p>
-        <a href="#">Learn more ></a>
-      </div>
-    </div>
-    <div id="footer-part">
-      <table id="footer">
-        <tr>
-          <th>What's new</th>
-          <th>Microsoft Store</th>
-          <th>Education</th>
-          <th>Business</th>
-          <th>Developer & IT</th>
-          <th>Company</th>
-        </tr>
-        <td>Surface Pro 9</td>
-        <td>Account Profile</td>
-        <td>Microsoft in education</td>
-        <td>Microsoft Cloud</td>
-        <td>Azure</td>
-        <td>Careers</td>
-        <tr>
-          <td>Surface Laptop 5</td>
-          <td>Download Center</td>
-          <td>Devices for education</td>
-          <td>Microsoft Security</td>
-          <td>Developer Center</td>
-          <td>About Microsoft</td>
-        </tr>
-        <tr>
-          <td>Surface Studio 2+</td>
-          <td>Microsoft Store support</td>
-          <td>Microsoft Teams for Education</td>
-          <td>Dynamics 365</td>
-          <td>Documentation</td>
-          <td>Company news</td>
-        </tr>
-        <tr>
-          <td>Surface Laptop Go 2</td>
-          <td>Returns</td>
-          <td>Microsoft 365 Education</td>
-          <td>Microsoft 365</td>
-          <td>Microsoft Learn</td>
-          <td>Privacy at Microsoft</td>
-        </tr>
-        <tr>
-          <td>Surface Laptop Studio</td>
-          <td>Order tracking</td>
-          <td>How to buy for your school</td>
-          <td>Microsoft Power Platform</td>
-          <td>Microsoft Tech Community</td>
-          <td>Investors</td>
-        </tr>
-        <tr>
-          <td>Microsoft 365</td>
-          <td>Microsoft Store Promise</td>
-          <td>Deals for students and parents</td>
-          <td>Microsoft Industry</td>
-          <td>AppSource</td>
-          <td>Accessibility</td>
-        </tr>
-      </table>
-    </div>
-    <div id="footer-last">
+    <div class="nav-menu">
       <ul>
         <li>
-          <a href="#"><p>Sitemap</p></a>
+          <a href="#"><b>Real Talk</b></a>
+        </li>
+        <li><a id="dash" href="#">Dashboard</a></li>
+        <li><a id="video" href="#">Real Talk Video Call</a></li>
+        <li><a id="chat" href="#">Real Talk Chat</a></li>
+        <li><a href="#">Features</a></li>
+        <li>
+          <a href="#">Products</a>
+          <ul>
+            <li><a href="#">Meet Now</a></li>
+            <li><a href="#">Real Talk Manager</a></li>
+            <li><a href="#">Real Talk With Alexa</a></li>
+            <li><a href="#">Real Talk for content creators</a></li>
+            <li><a href="#">Real Talk for business</a></li>
+          </ul>
         </li>
         <li>
-          <a href="#"><p>Contact Us</p></a>
-        </li>
-        <li>
-          <a href="#"><p>Privacy</p></a>
-        </li>
-        <li>
-          <a href="#"><p>Terms of use</p></a>
-        </li>
-        <li>
-          <a href="#"><p>Trademarks</p></a>
-        </li>
-        <li>
-          <a href="#"><p>About our ads</p></a>
-        </li>
-        <li>
-          <a href="#"><p>EU Contract Summary</p></a>
-        </li>
-        <li>
-          <a href="#"><p>Legal</p></a>
-        </li>
-        <li>
-          <a href="#"><p>© Microsoft 2023</p></a>
+          <a href="#">Get Help</a>
+          <ul>
+            <li><a href="#">Real Talk Support</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">About Real Talk</a></li>
+          </ul>
         </li>
       </ul>
     </div>
-  </body>
+    <div class="sign-in" id="sign-in-2">
+      <ul>
+        <li id="logout"><a href="#">Host a meeting</a></li>
+        <li class="dom-manipulation">
+          <a href="#">Sign In</a>
+          <ul>
+            <li><a href="#">My account</a></li>
+            <li><a href="#">Use Real Talk Online</a></li>
+            <li>
+              <a href="./signup.html">New to Real Talk? <span>Sign Up</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- navbar-end -->
+
+  <!-- mid-section-start -->
+
+  <div id="mid">
+    <div class="mid-1">
+      <h1>Introducing the new Bing <span>in Real Talk</span></h1>
+      <h2>
+        Ready to supercharge your chats? Bing in Real Talk can help you get
+        answers, creative ideas or summaries in chat, anytime, anywhere.
+        <a href="#">Learn More</a>
+      </h2>
+      <a href="#"><button>Download Real Talk</button></a>
+      <div class="last">
+        <a href="#">Open Real Talk in your browser</a>
+      </div>
+    </div>
+    <div class="mid-2">
+      <img src="https://secure.skypeassets.com/content/dam/scom/blogs/skype-bot-collab/image-desktop-bing.png"
+        alt="error" />
+    </div>
+  </div>
+
+  <div id="mid-second">
+    <h1>Discover more from Real Talk</h1>
+  </div>
+
+  <div id="mid-third">
+    <div>
+      <img src="https://secure.skypeassets.com/content/dam/scom/blogs/skype-bot-collab/share-thumbnail-3.png"
+        alt="error" />
+      <h3><b>Get social with the new Bing in Real Talk</b></h3>
+      <p>
+        The new Bing in Real Talk is your AI-powered copilot, and can provide
+        helpful answers to your questions. Whether you need a quick answer or
+        something more in-depth, Bing uses the latest advancements in AI
+        technology to provide you with the most real-time answers and
+        insights.
+      </p>
+      <a href="#">Learn more ></a>
+    </div>
+    <div>
+      <img src="https://secure.skypeassets.com/content/dam/scom/blogs/bing/skype-bing-thumbnail.jpg" alt="error" />
+      <h3><b>​Want to be the hero on your next call? 🦸</b></h3>
+      <p>
+        Did you know Real Talk Bing mashup happened? Here are the results - a
+        unique high-quality background images in your Real Talk calls! And that's
+        not all, you can now kill time by searching up the image and exploring
+        more about the beautiful scenery and places you see on your
+        background!
+      </p>
+      <a href="#">Learn more ></a>
+    </div>
+    <div>
+      <img src="https://secure.skypeassets.com/content/dam/scom/blogs/messaging/home-page-modern-tab.jpg" alt="error" />
+      <h3>
+        <b>Your chats are about to get much better, Real Talk's new and improved
+          messaging is here!</b>
+      </h3>
+      <p>
+        Last month we revealed our big plans for an improved, faster,
+        reliable, and super modern-looking Real Talk. Now we're making good on our
+        promise by rolling out the first of the new upgrades.
+      </p>
+      <a href="#">Learn more ></a>
+    </div>
+    <div>
+      <img src="https://secure.skypeassets.com/content/dam/scom/blogs/evergreen/home-page-tab-template.jpg"
+        alt="error" />
+      <h3><b>Preserving the connections that matter most with Real Talk</b></h3>
+      <p>
+        And thanks to Real Talk, it’s also never been easier. Here’s how people
+        across the globe used technology to stay connected through it all.
+      </p>
+      <a href="#">Learn more ></a>
+    </div>
+  </div>
+  <div id="footer-part">
+    <table id="footer">
+      <tr>
+        <th>What's new</th>
+        <th>Microsoft Store</th>
+        <th>Education</th>
+        <th>Business</th>
+        <th>Developer & IT</th>
+        <th>Company</th>
+      </tr>
+      <td>Surface Pro 9</td>
+      <td>Account Profile</td>
+      <td>Microsoft in education</td>
+      <td>Microsoft Cloud</td>
+      <td>Azure</td>
+      <td>Careers</td>
+      <tr>
+        <td>Surface Laptop 5</td>
+        <td>Download Center</td>
+        <td>Devices for education</td>
+        <td>Microsoft Security</td>
+        <td>Developer Center</td>
+        <td>About Microsoft</td>
+      </tr>
+      <tr>
+        <td>Surface Studio 2+</td>
+        <td>Microsoft Store support</td>
+        <td>Microsoft Teams for Education</td>
+        <td>Dynamics 365</td>
+        <td>Documentation</td>
+        <td>Company news</td>
+      </tr>
+      <tr>
+        <td>Surface Laptop Go 2</td>
+        <td>Returns</td>
+        <td>Microsoft 365 Education</td>
+        <td>Microsoft 365</td>
+        <td>Microsoft Learn</td>
+        <td>Privacy at Microsoft</td>
+      </tr>
+      <tr>
+        <td>Surface Laptop Studio</td>
+        <td>Order tracking</td>
+        <td>How to buy for your school</td>
+        <td>Microsoft Power Platform</td>
+        <td>Microsoft Tech Community</td>
+        <td>Investors</td>
+      </tr>
+      <tr>
+        <td>Microsoft 365</td>
+        <td>Microsoft Store Promise</td>
+        <td>Deals for students and parents</td>
+        <td>Microsoft Industry</td>
+        <td>AppSource</td>
+        <td>Accessibility</td>
+      </tr>
+    </table>
+  </div>
+  <div id="footer-last">
+    <ul>
+      <li>
+        <a href="#">
+          <p>Sitemap</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>Contact Us</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>Privacy</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>Terms of use</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>Trademarks</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>About our ads</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>EU Contract Summary</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>Legal</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <p>© Microsoft 2023</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</body>
+
 </html>
 
 <script>
@@ -273,7 +273,7 @@
   const videodbtn = document.getElementById("video");
   const chatbtn = document.getElementById("chat");
 
-  if(data) {
+  if (data) {
     full_name.textContent = `Hi ! ${data.name}`;
     full_name.style.marginTop = "7px";
     full_name.style.fontWeight = "bolder";
@@ -296,44 +296,71 @@
     logout.style.cursor = "pointer";
     // logout.style.fontSize = "60px";
     // logout.style.padding = "10px";
-    logout.addEventListener("click",async()=>{
-   try{
-     fetch(`https://nice-lime-elephant-hat.cyclic.app/user/logout`,
-     {
-      method: "POST",
-      headers : {
-        "content-type" : "application/json",
-        "Authorization": `${token}`
+    logout.addEventListener("click", async () => {
+      try {
+        fetch(`https://nice-lime-elephant-hat.cyclic.app/user/logout`,
+          {
+            method: "POST",
+            headers: {
+              "content-type": "application/json",
+              "Authorization": `${token}`
+            }
+          }
+        ).then(res => res.json())
+          .then(data => {
+            localStorage.clear();
+            Swal.fire(
+              `${data.msg}`,
+              '',
+              'success'
+            )
+          })
+        setTimeout(() => {
+          window.location.reload();
+        }, 2000);
+      } catch (err) {
+        console.log(err);
       }
-     }
-     ).then(res=> res.json())
-     .then(data => {
-      localStorage.clear();
-      Swal.fire(
-          `${data.msg}`,
-          '',
-          'success'
-        )
-     })
-     setTimeout(() => {
-      window.location.reload();
-     }, 2000);
-   } catch(err){
-     console.log(err);
-   }
-  })
-  } 
-
-  if(token){
-    dashboardbtn.addEventListener("click",()=>{
-      window.location.href="./dashboard.html"
-    })
-    videodbtn.addEventListener("click",()=>{
-      window.location.href="./room.html?type=videochat"
-    })
-    chatbtn.addEventListener("click",()=>{
-      window.location.href="./room.html?type=message"
     })
   }
+
+  // if (token) {
+  dashboardbtn.addEventListener("click", () => {
+    if (token) {
+
+      window.location.href = "./dashboard.html"
+    } else {
+      Swal.fire({
+        icon: "error",
+        title: "Please Login First",
+        text: "Login To Access",
+      });
+    }
+  })
+  videodbtn.addEventListener("click", () => {
+    if (token) {
+      window.location.href = "./room.html?type=videochat"
+
+    } else {
+      Swal.fire({
+        icon: "error",
+        title: "Please Login First",
+        text: "Login To Access",
+      });
+    }
+  })
+  chatbtn.addEventListener("click", () => {
+    if (token) {
+      window.location.href = "./room.html?type=message"
+
+    } else {
+      Swal.fire({
+        icon: "error",
+        title: "Please Login First",
+        text: "Login To Access",
+      });
+    }
+  })
+  // }
 
 </script>
