final_project_done

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -31,7 +31,7 @@
             <h2>Get started.</h2>
             <p>Already have an account? <a href="./login.html">Log in</a></p>
             <div class="sign-up-buttons">
-              <a href="http://localhost:8080/auth/google" class="btn btn-danger"><button id="sign-up"><img src="./images/google-icon.png"> Sign up with Google</button></a>
+              <a href="https://nice-lime-elephant-hat.cyclic.app/auth/google" class="btn btn-danger"><button id="sign-up"><img src="./images/google-icon.png"> Sign up with Google</button></a>
               <a href="https://github.com/login/oauth/authorize?client_id=7985eda3cc93ebd0ce4a&scope=user:email"><button id="sign-up-facebook"><img src="./images/icons8-github-30.png" width="20px"> Sign up with Github</button></a>
             </div>
             <p class="socials-divider"><span>or</span></p>
