Responsive Login Page

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+
     <div class="main-wrap">
         <div class="box-container">
             <div class="img-box">
@@ -24,7 +25,7 @@
                 <div class="top-signup">
                     <span>Don't you have an account?</span>
                     <a href="./signup.html" class="signup-btn">SIGN UP</a>
-                </div>
+                </div>              
                 <div class="mid-container">
                     <h1>Welcome Back</h1>
                     <h6>Login your Account</h6>
@@ -35,10 +36,11 @@
                         <label for="Password">Password</label></br>
                         <input type="password" name="password" id="lpass" placeholder="Your password">
                         <br>
-                        <span><a href="#" class="fg-pass">Forgot password?</a></span>
+                        <span><a href="./signup.html" class="fg-pass">Forgot password?</a></span>
                         <br>
                         <button type="submit" class="login-btn" id="login">Login</button>
                     </form>
+                   
                 </div>
                 <div class="login-with">
                     <span>Login with</span> 
