--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -45,7 +45,7 @@
       <div id="main_img_info">
 
        
-        <a href="./room.html?type=videochat">
+        <a id="anchor" href="./room.html?type=videochat">
           <div class="div_img_info">
             <img
               class="img_info"
@@ -56,7 +56,7 @@
           </div>
         </a>
         
-        <a href="./room.html?type=message">
+        <a id="anchor" href="./room.html?type=message">
           <div class="div_img_info">
             <img
               class="img_info"
@@ -66,7 +66,7 @@
             <p>Message</p>
           </div>
         </a>
-        <a href="./index.html">
+        <a id="anchor" href="./index.html">
           <div class="div_img_info">
             <img
               class="img_info"
@@ -90,6 +90,85 @@
         <!-- </a> -->
       </div>
     </div>
+
+
+    <footer class="padding_4x">
+      <div class="flex">
+        <section class="flex-content padding_1x">
+          <h3>About</h3>
+          <a href="#">Zoom Blog</a>
+          <a href="#">Customers</a>
+          <a href="#">Our Team</a>
+          <a href="#">Careers</a>
+          <a href="#">Integrations</a>
+          <a href="#">Partners</a>
+          <a href="#">Investors</a>
+          <a href="#">Real Talk Ventures</a>
+          <a href="#">Developer</a>
+        </section>
+        <section class="flex-content padding_1x">
+          <h3>Download</h3>
+          <a href="#">Meetings Client</a>
+          <a href="#">Zoom Rooms Client</a>
+          <a href="#">Zoom Rooms Controller</a>
+          <a href="#">Browser Extension</a>
+          <a href="#">Outlook Plug-in</a>
+          <a href="#">iPhone/iPad App</a>
+          <a href="#">Android App</a>
+          <a href="#">Zoom Virtual Backgrounds</a>
+        </section>
+        <section class="flex-content padding_1x">
+          <h3>Sales</h3>
+          <a href="#">1.888.799.9666</a>
+          <a href="#">Contact Sales</a>
+          <a href="#">Plans & Pricing</a>
+          <a href="#">Request a Demo</a>
+          <a href="#">Webinars and Events</a>
+        </section>
+        <section class="flex-content padding_1x">
+          <h3>Support</h3>
+          <a href="#">Test Real Talk</a>
+          <a href="#">Account</a>
+          <a href="#">Support Center</a>
+          <a href="#">Learning Center</a>
+          <a href="#">Feedback</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Developer Support</a>
+          <a href="#">Legal Policies</a>
+        </section>
+        <section class="flex-content padding_1x">
+          <h3>Newsletter</h3>
+          <a>You can trust us. we only send promo offers,</a> <br />
+          <fieldset class="fixed_flex">
+            <input
+              type="email"
+              name="newsletter"
+              placeholder="Your Email Address"
+            />
+            <button class="btn btn_2">Subscribe</button>
+          </fieldset>
+        </section>
+      </div>
+      <div class="flex">
+        <section class="flex-content padding_1x">
+          <p>Copyright ©2023 All rights reserved || Real Talk ❤️</p>
+        </section>
+        <section class="flex-content padding_1x">
+          <a href="https://www.facebook.com/zoom"
+            ><i class="fa fa-facebook"></i
+          ></a>
+          <a href="https://twitter.com/zoom"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.instagram.com/zoom/"
+            ><i class="fa fa-dribbble"></i
+          ></a>
+          <a href="https://www.linkedin.com/company/zoom-video-communications/"
+            ><i class="fa fa-linkedin"></i
+          ></a>
+        </section>
+      </div>
+    </footer>
+
+
 
   </body>
 </html>
