--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,17 +15,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
   <title>Real Talk</title>
   <link rel="stylesheet" href="./styles/index.css" />
+
 </head>
 
 <body>
   
   <nav class="navbar">
     <div class="navbar-brand">
-      <img src="./images/real_talk_blue.png" alt="Logo">
+      <img id="image-home" src="./images/real_talk_blue.png" alt="Logo">
     </div>
     <ul class="navbar-menu">
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./dashboard.html">Dashboard</a></li>
+      <li><a id="dash" href="#">Dashboard</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Feature</a></li>
       <li><a href="#">Pricing</a></li>
@@ -88,8 +89,8 @@
       Connect, Communicate, and Conquer: Empowering Video Chat for Seamless Global Communication</h1>
     <h3>Welcome to our video chat application where you can enjoy seamless and crystal-clear video calls, connect with anyone worldwide, and experience secure and encrypted communication to protect your privacy and data, all while enjoying high-quality video and audio, user-friendly interface, and additional features like screen sharing, chat messaging, and customizable virtual backgrounds for a truly immersive video chat experience</h3>
     <div class="buttons">
-      <button>Meet Now</button>
-      <button>Call Now</button>
+      <button id="meet-now">Meet Now</button>
+      <button id="chat-now">Chat Now</button>
     </div>
   </div>
   <div class="right-div">
@@ -99,61 +100,7 @@
 
 
 </header>
-  <footer>
-    <footer id="footer">
-      <div class="footer-div">
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Services</a>
-        <a href="#">Products</a>
-      </div>
-      <div class="footer-div">
-        <a href="#">FAQ</a>
-        <a href="#">Blog</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Testimonials</a>
-        <a href="#">Careers</a>
-      </div>
-      <div class="footer-div">
-        <a href="#">Terms and Conditions</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Shipping Information</a>
-        <a href="#">Returns and Refunds</a>
-        <a href="#">Support</a>
-      </div>
-      <div class="footer-div">
-        <a href="#">News</a>
-        <a href="#">Events</a>
-        <a href="#">Gallery</a>
-        <a href="#">Partners</a>
-        <a href="#">Sitemap</a>
-      </div>
-    </footer>
-    <footer>
-      <div id="social-media">
-        <div id="first">
-          <h1>Contact Info</h1>
-          <br>
-          <img src="https://www.keev.tech/static/media/support.4a614174e1a57cb849d3c596471dbe9d.svg" alt="Support Icon">
-          <p>emailaddress@testdomain.com</p>
-          <img src="https://www.keev.tech/static/media/contact.bf85f34199460fa02e957139f73b72fb.svg" alt="Contact Icon">
-          <p>+86 987-654-3210</p>
-        </div>
-        <div id="second">
-          <h1>Follow Us</h1>
-          <img src="https://www.keev.tech/static/media/follow-1.676616da45fd667ef2e24ec74b0ea688.svg" alt="Social Media Icon 1">
-          <img src="https://www.keev.tech/static/media/follow-2.6f8cbe714b1fd049c4d6da174363ba7d.svg" alt="Social Media Icon 2">
-          <img src="https://www.keev.tech/static/media/follow-3.bd25e4165c238c5bfb95abedbcd247ba.svg" alt="Social Media Icon 3">
-          <img src="https://www.keev.tech/static/media/follow-4.578a3e7186cfb1d57306a4ce2794a885.svg" alt="Social Media Icon 4">
-          <img src="https://www.keev.tech/static/media/follow-5.0a2812c9f828df156563febc8c12ce05.svg" alt="Social Media Icon 5">
-          <img src="https://www.keev.tech/static/media/follow-6.2a7c229066560e8c592fde3ce2d107c5.svg" alt="Social Media Icon 6">
-        </div>
-      </div>
-      
-    </footer>
-    
-  </footer>
+
   
 </body>
 <script src="./scripts/index.js"></script>
