--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,25 +8,30 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="manifest" href="./favicon_io/site.webmanifest" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+
+
   <title>Real Talk</title>
+  <link rel="stylesheet" href="./styles/dashboard.css">
   <link rel="stylesheet" href="./styles/index.css" />
 
 </head>
 
 <body>
-  
+
   <nav class="navbar">
     <div class="navbar-brand">
       <img id="image-home" src="./images/real_talk_blue.png" alt="Logo">
     </div>
     <ul class="navbar-menu">
       <li><a href="./index.html">Home</a></li>
-      <li><a id="dash" href="#">Dashboard</a></li>
+      <li><a id="dash" >Dashboard</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Feature</a></li>
       <li><a href="#">Pricing</a></li>
@@ -43,65 +48,151 @@
     <div class="slideshow">
       <img src="" alt="Slideshow Image" id="slideshow-image">
     </div>
-    
 
-<div class="main-div">
-  <div class="content">
-    <div class="image">
-      <img src="https://storage.googleapis.com/dialpad-cms.appspot.com/cms/transformed-images/storage_googleapis_com/dialpad-cms.appspot.com/cms/Group-conference-call_header-v2.webp" alt="Image">
-    </div>
-    <div>
-      
-    </div>
-    <div class="text">
-      <h1>Video Call Online</h1>
-      <h3>Need to meet face-to-face virtually for work?</h3>
-      <p>Sign up with your Microsoft 365 or Google account to start making unlimited online video calls for free, with unlimited audio recordings, virtual backgrounds, and more. It takes just a minute to get started. Or, take a self-guided interactive tour of the app first!</p>
-      <div class="links">
-        <a href="#">Get Started</a>
-        <a href="#">Take a Tour<span class="material-symbols-outlined">
-          share
-          </span> </a>
+
+    <div class="main-div">
+      <div class="content">
+        <div class="image">
+          <img
+            src="https://storage.googleapis.com/dialpad-cms.appspot.com/cms/transformed-images/storage_googleapis_com/dialpad-cms.appspot.com/cms/Group-conference-call_header-v2.webp"
+            alt="Image">
+        </div>
+        <div>
+
+        </div>
+        <div class="text">
+          <h1>Video Call Online</h1>
+          <h3>Need to meet face-to-face virtually for work?</h3>
+          <p>Sign up with your Microsoft 365 or Google account to start making unlimited online video calls for free,
+            with unlimited audio recordings, virtual backgrounds, and more. It takes just a minute to get started. Or,
+            take a self-guided interactive tour of the app first!</p>
+          <div class="links">
+            <a href="#">Get Started</a>
+            <a href="#">Take a Tour<span class="material-symbols-outlined">
+                share
+              </span> </a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div id="main-2">
-  <div class="item">
-    <img src="https://www.keev.tech/static/media/guide-1.4d52730f3074068e81fedde5173ea75f.svg" alt="Image 1">
-    <h2>Join Us</h2>
-    <p>Sign up on Real Talk for free and start using our services</p>
-  </div>
-  <div class="item">
-    <img src="https://www.keev.tech/static/media/guide-2.b0c7c838c93a7c029a07d9cb69c38ee8.svg" alt="Image 2">
-    <h2>Create Your Own Meeting</h2>
-    <p>Choose one of our existing Astra strategies </p>
-  </div>
-  <div class="item">
-    <img src="https://www.keev.tech/static/media/guide-3.7816379b2a42d70a3b15b83236873049.svg" alt="Image 3">
-    <h2>Sit Back and Relax</h2>
-    <p>Relax after creating strategy as our systems do all the work</p>
-  </div>
-</div>
-<div id="main-3">
-  <div class="left-div">
-    <h1>
-      Connect, Communicate, and Conquer: Empowering Video Chat for Seamless Global Communication</h1>
-    <h3>Welcome to our video chat application where you can enjoy seamless and crystal-clear video calls, connect with anyone worldwide, and experience secure and encrypted communication to protect your privacy and data, all while enjoying high-quality video and audio, user-friendly interface, and additional features like screen sharing, chat messaging, and customizable virtual backgrounds for a truly immersive video chat experience</h3>
-    <div class="buttons">
-      <button id="meet-now">Meet Now</button>
-      <button id="chat-now">Chat Now</button>
+    <div id="main-2">
+      <div class="item">
+        <img src="https://www.keev.tech/static/media/guide-1.4d52730f3074068e81fedde5173ea75f.svg" alt="Image 1">
+        <h2>Join Us</h2>
+        <p>Sign up on Real Talk for free and start using our services</p>
+      </div>
+      <div class="item">
+        <img src="https://www.keev.tech/static/media/guide-2.b0c7c838c93a7c029a07d9cb69c38ee8.svg" alt="Image 2">
+        <h2>Create Your Own Meeting</h2>
+        <p>Choose one of our existing Astra strategies </p>
+      </div>
+      <div class="item">
+        <img src="https://www.keev.tech/static/media/guide-3.7816379b2a42d70a3b15b83236873049.svg" alt="Image 3">
+        <h2>Sit Back and Relax</h2>
+        <p>Relax after creating strategy as our systems do all the work</p>
+      </div>
     </div>
-  </div>
-  <div class="right-div">
-    <img src="https://www.keev.tech/static/media/community.9480bc44931d75842af0596eb0759803.svg" alt="Image">
-  </div>
-</div>
+    <div id="main-3">
+      <div class="left-div">
+        <h1>
+          Connect, Communicate, and Conquer: Empowering Video Chat for Seamless Global Communication</h1>
+        <h3>Welcome to our video chat application where you can enjoy seamless and crystal-clear video calls, connect
+          with anyone worldwide, and experience secure and encrypted communication to protect your privacy and data, all
+          while enjoying high-quality video and audio, user-friendly interface, and additional features like screen
+          sharing, chat messaging, and customizable virtual backgrounds for a truly immersive video chat experience</h3>
+        <div class="buttons">
+          <button id="meet-now">Meet Now</button>
+          <button id="chat-now">Chat Now</button>
+        </div>
+      </div>
+      <div class="right-div">
+        <img src="https://www.keev.tech/static/media/community.9480bc44931d75842af0596eb0759803.svg" alt="Image">
+      </div>
+    </div>
 
 
-</header>
+  </header>
+  <footer class="padding_4x">
+    <div class="flex">
+      <section class="flex-content padding_1x">
+        <h3>About</h3>
+        <a href="#">Zoom Blog</a>
+        <a href="#">Customers</a>
+        <a href="#">Our Team</a>
+        <a href="#">Careers</a>
+        <a href="#">Integrations</a>
+        <a href="#">Partners</a>
+        <a href="#">Investors</a>
+        <a href="#">Real Talk Ventures</a>
+        <a href="#">Developer</a>
+      </section>
+      <section class="flex-content padding_1x">
+        <h3>Download</h3>
+        <a href="#">Meetings Client</a>
+        <a href="#">Zoom Rooms Client</a>
+        <a href="#">Zoom Rooms Controller</a>
+        <a href="#">Browser Extension</a>
+        <a href="#">Outlook Plug-in</a>
+        <a href="#">iPhone/iPad App</a>
+        <a href="#">Android App</a>
+        <a href="#">Zoom Virtual Backgrounds</a>
+      </section>
+      <section class="flex-content padding_1x">
+        <h3>Sales</h3>
+        <a href="#">1.888.799.9666</a>
+        <a href="#">Contact Sales</a>
+        <a href="#">Plans & Pricing</a>
+        <a href="#">Request a Demo</a>
+        <a href="#">Webinars and Events</a>
+      </section>
+      <section class="flex-content padding_1x">
+        <h3>Support</h3>
+        <a href="#">Test Real Talk</a>
+        <a href="#">Account</a>
+        <a href="#">Support Center</a>
+        <a href="#">Learning Center</a>
+        <a href="#">Feedback</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Developer Support</a>
+        <a href="#">Legal Policies</a>
+      </section>
+      <section class="flex-content padding_1x">
+        <h3>Newsletter</h3>
+        <a>You can trust us. we only send promo offers,</a> <br />
+        <fieldset class="fixed_flex">
+          <input
+            type="email"
+            name="newsletter"
+            placeholder="Your Email Address"
+          />
+          <button class="btn btn_2">Subscribe</button>
+        </fieldset>
+      </section>
+    </div>
+    <div class="flex">
+      <section class="flex-content padding_1x">
+        <p>Copyright ©2023 All rights reserved || Real Talk ❤️</p>
+      </section>
+      <section class="flex-content padding_1x">
+        <a href="https://www.facebook.com/zoom"
+          ><i class="fa fa-facebook"></i
+        ></a>
+        <a href="https://twitter.com/zoom"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.instagram.com/zoom/"
+          ><i class="fa fa-dribbble"></i
+        ></a>
+        <a href="https://www.linkedin.com/company/zoom-video-communications/"
+          ><i class="fa fa-linkedin"></i
+        ></a>
+      </section>
+    </div>
+  </footer>
 
-  
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+crossorigin="anonymous"></script>
 <script src="./scripts/index.js"></script>
+
 </html>
