--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -47,7 +47,7 @@
   </nav> -->
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Real Talk</a>
+      <a style=" color: white;font-size: 30px;" class="navbar-brand" href="./index.html">Real Talk</a>
       <button style="color: white;" id="toggerId" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span  class="navbar-toggler-icon"></span>
       </button>
