--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -71,7 +71,7 @@
             <a  id="dash" style="cursor: pointer;" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link"  href="#foo">About Us</a>
           </li>
 
           <li class="nav-item">
@@ -152,7 +152,7 @@
     </div>
 
 
-    <footer class="padding_4x ">
+    <footer class="padding_4x " id="foo">
       <div class="flex">
         <section class="flex-content padding_1x">
           <h3>About</h3>
