--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -61,7 +61,7 @@
             <a  id="dash" style="cursor: pointer;" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" id="btmadd" href="#foo">About Us</a>
           </li>
 
           <li class="nav-item">
@@ -149,7 +149,7 @@
 
 
   </header>
-  <footer class="padding_4x">
+  <footer class="padding_4x" id="foo">
     <div class="flex">
       <section class="flex-content padding_1x">
         <h3>About</h3>
